# CryptoGuard

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
.skills/cryptoguard-check/: skill.md
cryptoguard/: __init__.py  __main__.py  analyzer.py  cli.py  constants.py  goplus.py  hook.py  mcp_server.py  report.py  reputation.py  scanner.py
docs/: index.html
hooks/: claude-code.json  install.sh
tests/: test_hook.py
