[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoguard"
version = "0.1.0"
description = "AI agent safety layer for crypto transactions - blocks honeypots, blacklists, and rug pulls before they happen"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "momenbasel", email = "momenbasel@users.noreply.github.com"},
]
keywords = [
    "crypto", "security", "honeypot", "blacklist", "rug-pull",
    "smart-contract", "defi", "web3", "claude-code", "ai-agent",
    "mcp", "hook", "safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/momenbasel/CryptoGuard"
Repository = "https://github.com/momenbasel/CryptoGuard"
Issues = "https://github.com/momenbasel/CryptoGuard/issues"

[project.scripts]
cryptoguard = "cryptoguard.cli:main"

[tool.setuptools.packages.find]
include = ["cryptoguard*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
